add vs code editor

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "axios": "^0.21.4",
     "core-js": "^3.18.0",
     "echarts": "^4.9.0",
-    "json-editor-vue3": "^1.0.5",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
+    "monaco-editor": "^0.25.2",
+    "monaco-editor-webpack-plugin": "^6.0.0",
     "neffos.js": "^0.1.25",
     "nprogress": "^0.2.0",
     "vue": "^3.2.18",
