new execution logic

--- a/.env.production
+++ b/.env.production
@@ -7,5 +7,6 @@ VUE_APP_PORT=8000
 # mock 是否开启 true|false ， development环境有效
 VUE_APP_MOCK = false
 
-#api接口域名
-VUE_APP_APIHOST = http://yapi.liqingsong.cc/mock/11
+# API接口地址
+VUE_APP_API_SERVER = http://server.deeptest.com/api/v1
+VUE_APP_API_AGENT = http://127.0.0.1:8086/api/v1
