--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,12 @@
 #运行环境
 NODE_ENV = 'development'
 
-# devServer port
+# 服务端口
 VUE_APP_PORT=8000
 
-# mock 是否开启 true|false ， development环境有效
+# 是否开启Mock  true|false，development环境有效
 VUE_APP_MOCK = true
 
-#api接口域名
-VUE_APP_APIHOST_MOCK = /api
-VUE_APP_APIHOST = http://127.0.0.1:8085/api/v1
+# API接口地址
+VUE_APP_API_SERVER = http://server.deeptest.loc:8085/api/v1
+VUE_APP_API_AGENT = http://127.0.0.1:8086/api/v1
