--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash.debounce": "^4.0.8",
     "md-editor-v3": "^2.4.1",
     "mitt": "^3.0.0",
+    "moment": "^2.29.4",
     "monaco-editor": "^0.25.2",
     "monaco-editor-webpack-plugin": "^6.0.0",
     "neffos.js": "^0.1.25",
@@ -28,7 +29,7 @@
     "vue": "^3.2.18",
     "vue-i18n": "^9.1.7",
     "vue-loader-v16": "^16.0.0-beta.5.4",
-    "vue-router": "^4.0.11",
+    "vue-router": "4.0.12",
     "vue3-json-editor": "^1.1.4",
     "vuex": "^4.0.2"
   },
