--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "neffos.js": "^0.1.25",
     "nprogress": "^0.2.0",
     "vue": "^3.2.18",
-    "vue-i18n": "^9.1.7",
+    "vue-i18n": "9.1.9",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "vue-router": "4.0.12",
     "vue3-json-editor": "^1.1.4",
