--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "monaco-editor": "^0.25.2",
     "monaco-editor-webpack-plugin": "^6.0.0",
     "neffos.js": "^0.1.25",
+    "node-fetch": "2.6.6",
     "nprogress": "^0.2.0",
     "vue": "^3.2.18",
     "vue-i18n": "9.1.9",
