--- a/.env.production
+++ b/.env.production
@@ -8,8 +8,5 @@ VUE_APP_PORT=8000
 VUE_APP_MOCK = false
 
 # API接口地址
-# VUE_APP_API_SERVER = https://server.deeptest.com/api/v1
-# VUE_APP_API_AGENT =  http://127.0.0.1:55232/agent
-
-VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
+VUE_APP_API_SERVER =
 VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
