--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
     "@toast-ui/editor": "^2.5.3",
+    "@vuepic/vue-datepicker": "^3.6.5",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.21.4",
     "core-js": "^3.18.0",
     "echarts": "^4.9.0",
+    "exceljs": "^4.3.0",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
+    "luckyexcel": "^1.0.1",
     "md-editor-v3": "^2.4.1",
     "mitt": "^3.0.0",
     "moment": "^2.29.4",
@@ -63,7 +66,8 @@
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.2",
     "typescript": "~4.1.6",
-    "vue-jest": "^5.0.0-alpha.10"
+    "vue-jest": "^5.0.0-alpha.10",
+    "file-saver": "^2.0.5"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
