--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-fetch": "2.6.6",
     "nprogress": "^0.2.0",
     "vue": "^3.2.18",
+    "vue-contenteditable": "^4.1.0",
     "vue-i18n": "9.1.9",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "vue-router": "4.0.12",
