--- a/.env.development
+++ b/.env.development
@@ -14,4 +14,8 @@ VUE_APP_MOCK = true
 VUE_APP_API_SERVER = http://192.168.60.103:8085/api/v1
 VUE_APP_API_AGENT =  http://192.168.60.103:8086/api/v1
 
+# 测试开发环境
+# VUE_APP_API_SERVER = http://123.249.104.232:8085/api/v1
+# VUE_APP_API_AGENT =  http://123.249.104.232:8086/api/v1
+
 
