fix: 警告去除&title修改

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-antd-vue",
+  "name": "deeptest",
   "description": "Vue3.x Antd Admin",
   "version": "1.0.0",
   "private": true,
