update: 项目切换添加新建项目弹框

--- a/.env.development
+++ b/.env.development
@@ -7,13 +7,6 @@ VUE_APP_PORT=8000
 # 是否开启Mock  true|false，development环境有效
 VUE_APP_MOCK = true
 
-# API接口地址
-# VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
-# VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
-
-# local
-VUE_APP_API_SERVER = http://192.168.5.230:8085/api/v1
-VUE_APP_API_AGENT =  http://192.168.5.230:8086/api/v1
-
-
-
+# API接口地址 ，环境变量勿修改，本地开发请自建.env.local文件
+VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
+VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
