--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "admin-antd-vue",
-  "description": "Vue3.x Antd Admin",
+  "name": "deeptest",
+  "description": "",
   "version": "1.0.0",
   "private": true,
   "scripts": {
