--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@vue/compiler-sfc": "^3.2.18",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^2.0.0-rc.15",
+    "@vueuse/components": "10.1.2",
+    "@vueuse/core": "10.1.2",
     "body-parser": "^1.19.0",
     "chokidar": "^3.5.2",
     "eslint": "^6.8.0",
