--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,7 @@ VUE_APP_MOCK = true
 # API接口地址 ，环境变量勿修改，本地开发请自建.env.local文件
 VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
 VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
+
+
+# 部署环境 leyan | deeptest 默认 deeptest
+VUE_APP_DEPLOY_ENV = 'deeptest'
