--- a/.env.production
+++ b/.env.production
@@ -10,3 +10,6 @@ VUE_APP_MOCK = false
 # API接口地址
 VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
 VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
+
+# 部署环境 leyan | deeptest 默认 deeptest
+VUE_APP_DEPLOY_ENV = 'deeptest'
