--- a/.env.production
+++ b/.env.production
@@ -7,9 +7,8 @@ VUE_APP_PORT=8000
 # mock 是否开启 true|false ， development环境有效
 VUE_APP_MOCK = false
 
-# API接口地址
-VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
-VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
 
 # 部署环境 leyan | deeptest 默认 deeptest
 VUE_APP_DEPLOY_ENV = 'deeptest'
+VUE_APP_API_SERVER = http://192.168.5.224/api/v1
+VUE_APP_API_AGENT =  http://192.168.5.224/agent/api/v1
