--- a/.env.production
+++ b/.env.production
@@ -7,7 +7,9 @@ VUE_APP_PORT=8000
 # mock 是否开启 true|false ， development环境有效
 VUE_APP_MOCK = false
 
-
-# API接口地址
-VUE_APP_API_SERVER = http://111.231.16.35:8085/api/v1
-VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
+# 部署环境 ly | deeptest 默认 deeptest
+VUE_APP_DEPLOY_ENV = 'ly'
+VUE_APP_DEPLOY_ENV_TITLE= '乐研 API'
+VUE_APP_DEPLOY_ENV_ICON= 'https://od-1310531898.cos.ap-beijing.myqcloud.com/202306281904109.ico'
+VUE_APP_API_SERVER = http://192.168.5.224/api/v1
+VUE_APP_API_AGENT =  http://192.168.5.224/agent/api/v1
