--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "vue-router": "4.0.12",
     "vue3-json-editor": "^1.1.4",
-    "vuedraggable": "next",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
