--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
     "@handsontable/vue3": "^12.3.0",
+    "@leyan/feedback": "0.0.4",
     "@toast-ui/editor": "^2.5.3",
     "@vuepic/vue-datepicker": "^3.6.5",
     "ant-design-vue": "^2.2.8",
