--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,4 @@ VUE_APP_MOCK = false
 # API接口地址
 VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
 VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
+VUE_APP_API_STATIC = https://leyanapi-test.nancalcloud.com/upload
