fix: 客户支持动态端口，前端 server 和 Agent 端口

--- a/.env.production
+++ b/.env.production
@@ -13,3 +13,4 @@ VUE_APP_DEPLOY_ENV_TITLE= '乐研 API'
 VUE_APP_DEPLOY_ENV_ICON= 'https://od-1310531898.cos.ap-beijing.myqcloud.com/202306281904109.ico'
 VUE_APP_API_SERVER = http://192.168.5.224/api/v1
 VUE_APP_API_AGENT =  http://192.168.5.224/agent/api/v1
+VUE_APP_API_STATIC = https://leyanapi-test.nancalcloud.com/upload
