feat: 更换 logo 为线上地址  + 更新包开发者

--- a/.env.production
+++ b/.env.production
@@ -10,7 +10,7 @@ VUE_APP_MOCK = false
 # 部署环境 ly | deeptest 默认 deeptest
 VUE_APP_DEPLOY_ENV = 'ly'
 VUE_APP_DEPLOY_ENV_TITLE= '乐研 API'
-VUE_APP_DEPLOY_ENV_ICON= 'https://od-1310531898.cos.ap-beijing.myqcloud.com/202306281904109.ico'
+VUE_APP_DEPLOY_ENV_ICON= 'https://leyanapi.nancalcloud.com/upload/images/202306281904109.ico'
 VUE_APP_API_SERVER = http://192.168.5.224/api/v1
 VUE_APP_API_AGENT =  http://192.168.5.224/agent/api/v1
 VUE_APP_API_STATIC = https://leyanapi-test.nancalcloud.com/upload
