--- a/.env.ly-client
+++ b/.env.ly-client
@@ -8,8 +8,8 @@ VUE_APP_PORT=8000
 VUE_APP_MOCK = false
 
 # API接口地址
-VUE_APP_API_SERVER = https://leyanapi-test.nancalcloud.com/api/v1
-#VUE_APP_API_SERVER = https://leyanapi.nancalcloud.com/api/v1
+#VUE_APP_API_SERVER = https://leyanapi-test.nancalcloud.com/api/v1
+VUE_APP_API_SERVER = https://leyanapi.nancalcloud.com/api/v1
 VUE_APP_API_AGENT =  http://127.0.0.1:55112/api/v1
 
 
@@ -17,4 +17,4 @@ VUE_APP_API_AGENT =  http://127.0.0.1:55112/api/v1
 # 部署环境 ly | deeptest 默认 deeptest
 VUE_APP_DEPLOY_ENV = 'ly'
 VUE_APP_DEPLOY_ENV_TITLE= '乐研 API'
-VUE_APP_DEPLOY_ENV_ICON= 'https://od-1310531898.cos.ap-beijing.myqcloud.com/202306281904109.ico'
+VUE_APP_DEPLOY_ENV_ICON= 'https://leyanapi.nancalcloud.com/upload/images/202306281904109.ico'
