add helper page

--- a/.env.deeptest-client
+++ b/.env.deeptest-client
@@ -11,3 +11,5 @@ VUE_APP_MOCK = false
 # API接口地址
 VUE_APP_API_SERVER = http://111.231.16.35:8085/api/v1
 VUE_APP_API_AGENT =  http://127.0.0.1:55112/api/v1
+
+VUE_HELP_URL = https://deeptest.com
