--- a/.env.development
+++ b/.env.development
@@ -11,5 +11,4 @@ VUE_APP_MOCK = true
 VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
 VUE_APP_API_AGENT =  http://127.0.0.1:8086/api/v1
 VUE_APP_API_STATIC = https://leyanapi-test.nancalcloud.com/upload
-
-VUE_HELP_URL = https://deeptest.com
+VUE_APP_HELP_URL = https://deeptest.com
