--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "local": "vue-cli-service --mode=local serve",
-    "test": "vue-cli-service --mode=test serve",
-    "build": "vue-cli-service build",
+    "serve": "sh init.project.sh && vue-cli-service --mode=dev serve",
+
+    "build:dev": "sh init.project.sh && vue-cli-service build --mode=dev",
+    "build:test": "sh init.project.sh && vue-cli-service build --mode=test",
+    "build:prod": "sh init.project.sh && vue-cli-service build --mode=prod",
+    "build:client": "sh init.project.sh && vue-cli-service build --mode=client --dest ../deeptest-main/client/ui",
+
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "svgo": "svgo -f src/assets/iconsvg --config=src/assets/iconsvg/svgo.yml"
@@ -15,7 +18,6 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
     "@handsontable/vue3": "^12.3.0",
-    "@leyan/feedback": "0.0.4",
     "@toast-ui/editor": "^2.5.3",
     "@vuepic/vue-datepicker": "^3.6.5",
     "ant-design-vue": "^2.2.8",
