--- a/.env.production
+++ b/.env.production
@@ -5,9 +5,9 @@ VUE_APP_PORT=8000
 # 是否开启Mock  true|false，development 环境有效
 VUE_APP_MOCK = true
 
-VUE_APP_API_SERVER =
-VUE_APP_API_AGENT =
-VUE_APP_API_STATIC =
+VUE_APP_API_SERVER = http://127.0.0.1:8085/api/v1
+VUE_APP_API_AGENT  = http://127.0.0.1:8086/api/v1
+VUE_APP_API_STATIC = http://127.0.0.1:8085/static
 VUE_HELP_URL = https://deeptest.com
 
 ################ Deploy Settings Start  ################
