--- a/package.json
+++ b/package.json
@@ -5,15 +5,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode=development",
-
     "build": "vue-cli-service build --mode=production",
-
     "build:client": "APP_CONF=client vue-cli-service build --mode=production",
     "build:clientTest": "APP_CONF=client vue-cli-service build --mode development",
-
     "build:web": "APP_CONF=web vue-cli-service build --mode=production",
     "build:demo": "APP_CONF=demo vue-cli-service build --mode=production",
-
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "svgo": "svgo -f src/assets/iconsvg --config=src/assets/iconsvg/svgo.yml"
@@ -43,6 +39,7 @@
     "node-fetch": "2.6.6",
     "nprogress": "^0.2.0",
     "sortablejs": "^1.15.0",
+    "sweetalert2": "11.9.0",
     "vue": "3.3.4",
     "vue-contenteditable": "^4.1.0",
     "vue-i18n": "9.1.9",
@@ -50,8 +47,7 @@
     "vue-router": "4.0.12",
     "vue3-json-editor": "^1.1.4",
     "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2",
-    "sweetalert2": "11.9.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/echarts": "^4.9.10",
